# NEWPankkiautomaatti

./: .gitignore  API_CONTRACT_v2.md  ER model.mwb  ER model.mwb.bak  README.md  SETUP_AUTOSTART.md  package-lock.json  package.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  release.yml
backend/: API_CONTRACT_v0.md  app.js  db.js  ecosystem.config.js  eslint.config.mjs  openapi.yaml  package-lock.json  package.json
backend/__test__/: smoke.test.js
backend/config/: index.js
backend/controllers/: accountsController.js  atmController.js  authController.js  cardaccountcontroller.js  cardsController.js  logController.js  logsController.js  usersController.js
backend/db/: ER model.mwb  ER model.mwb.bak  STORED_PROCEDURES.md  procedures.sql  schema.sql  seed.sql
backend/middleware/: AppError.js  errorHandler.js  upload.js
backend/public/: preavatars.json
backend/routes/: accounts.js  avatar.js  cardaccount.js  cards.js  index.js  log.js  logs.js  users.js
bank-automat/: BankAutomat.iss  CMakeLists.txt  account.cpp  account.h  account.ui  accounts.cpp  accounts.h  accountsdata.cpp  accountsdata.h  accountselect.cpp  accountselect.h  accountselect.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  apiclient.cpp  apiclient.h  bank-automat.desktop  card.cpp  card.h  carddata.cpp  carddata.h  envconfig.h  images.qrc  log.cpp  log.h  logevents.cpp  logevents.h  logintest.cpp  logs.cpp  logs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  postinst  user.cpp  user.h  userdata.cpp  userdata.h
db/: ER model.mwb
